Car management/force-app/main/default/objects/Telemetry__c/Telemetry__c.object-meta.xml
<CustomObject>
    <label>Telemetry</label>
    <nameField>
        <label>Telemetry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Telemeties</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>