Car management/force-app/main/default/objects/Telemetry__c/fields/Car_age__c.field-meta.xml
<CustomField>
    <fullName>Car_age__c</fullName>
    <formula>NOW() - Pojazd__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Car age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>