Car management/force-app/main/default/objects/Telemetry__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <label>Component</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Piston</fullName>
            </value>
            <value>
                <fullName>Radiator</fullName>
            </value>
            <value>
                <fullName>Silencer</fullName>
            </value>
            <value>
                <fullName>Brake disc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>