Car management/force-app/main/default/objects/Telemetry__c/fields/Fueal_Usage__c.field-meta.xml
<CustomField>
    <fullName>Fueal_Usage__c</fullName>
    <formula>Pojazd__r.Spalanie__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fueal Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>