Car management/force-app/main/default/objects/Telemetry__c/fields/Pojazd__c.field-meta.xml
<CustomField>
    <fullName>Pojazd__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pojazd</label>
    <referenceTo>Pojazd__c</referenceTo>
    <relationshipLabel>Telemeties</relationshipLabel>
    <relationshipName>Telemeties</relationshipName>
    <type>Lookup</type>
</CustomField>