Car management/force-app/main/default/objects/Telemetry__c/fields/Power__c.field-meta.xml
<CustomField>
    <fullName>Power__c</fullName>
    <formula>Pojazd__r.Moc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Power</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>